tests/reference/asr-template_error_06-1cbc8a9.stderr
syntax error: Token 'requires' (of type 'identifier') is unexpected here
  --> tests/errors/template_error_06.f90:11:7
   |
11 |       requires r(t)
   |       ^^^^^^^^ 
